test_suite/tests/ui/identifier/newtype_not_last.stderr
error: `Other` must be the last variant
 --> tests/ui/identifier/newtype_not_last.rs:7:5
  |
7 |     Other(String),
  |     ^^^^^^^^^^^^^
